parser.output
Terminals unused in grammar

    AND_OP
    OR_OP


State 48 conflicts: 1 shift/reduce
State 93 conflicts: 2 shift/reduce
State 114 conflicts: 9 shift/reduce
State 119 conflicts: 9 shift/reduce
State 120 conflicts: 1 shift/reduce


Grammar

    0 $accept: root "end of file"

    1 root: main_class class_declaration_list "end of file"

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS RS id RP LB statement_list RB RB

    3 class_declaration_list: class_declaration class_declaration_list
    4                       | ε

    5 class_declaration: CLASS id LB var_declaration_list method_declaration_list RB

    6 var_declaration_list: var_declaration var_declaration_list
    7                     | ε

    8 var_declaration: type id DELI

    9 method_declaration_list: method_declaration method_declaration_list
   10                        | ε

   11 method_declaration: PUBLIC type id LP method_arguments RP LB method_content RETURN expression DELI RB

   12 method_arguments: type id
   13                 | method_arguments SEP method_arguments
   14                 | ε

   15 method_content: var_declaration method_content
   16               | statement method_content
   17               | ε

   18 type: INT LS RS
   19     | BOOLEAN
   20     | INT
   21     | id

   22 statement_list: statement statement_list
   23               | ε

   24 statement_else: ELSE statement
   25               | ε

   26 statement: LB statement_list RB
   27          | IF LP expression RP statement statement_else
   28          | WHILE LP expression RP statement
   29          | PRINT LP expression RP DELI
   30          | id ASSIGN_OP expression DELI
   31          | id LS expression RS ASSIGN_OP expression DELI

   32 expression: expression operator expression
   33           | expression SEP expression
   34           | expression LS expression RS
   35           | expression ATTR_OP LENGTH
   36           | expression ATTR_OP id LP expression RP
   37           | number
   38           | bool
   39           | id
   40           | THIS
   41           | NEW INT LS expression RS
   42           | NEW id LP RP
   43           | NOT_OP expression
   44           | LP expression RP
   45           | ε

   46 operator: ADD_OP
   47         | SUB_OP
   48         | EQ_OP
   49         | GT_OP
   50         | LT_OP
   51         | MULT_OP

   52 number: NUMBER

   53 bool: BOOL

   54 id: ID


Terminals, with rules where they appear

    "end of file" (0) 0 1
    error (256)
    BOOLEAN <std::string> (258) 19
    LENGTH <std::string> (259) 35
    SEP <std::string> (260) 13 33
    LP <std::string> (261) 2 11 27 28 29 36 42 44
    RP <std::string> (262) 2 11 27 28 29 36 42 44
    LB <std::string> (263) 2 5 11 26
    RB <std::string> (264) 2 5 11 26
    LS <std::string> (265) 2 18 31 34 41
    RS <std::string> (266) 2 18 31 34 41
    VOID <std::string> (267) 2
    STRING <std::string> (268) 2
    NEW <std::string> (269) 41 42
    INT <std::string> (270) 18 20 41
    PUBLIC <std::string> (271) 2 11
    CLASS <std::string> (272) 2 5
    STATIC <std::string> (273) 2
    MAIN <std::string> (274) 2
    RETURN <std::string> (275) 11
    THIS <std::string> (276) 40
    DELI <std::string> (277) 8 11 29 30 31
    WHILE <std::string> (278) 28
    IF <std::string> (279) 27
    ELSE <std::string> (280) 24
    PRINT <std::string> (281) 29
    NUMBER <int> (282) 52
    BOOL <bool> (283) 53
    ID <std::string> (284) 54
    ADD_OP <std::string> (285) 46
    SUB_OP <std::string> (286) 47
    MULT_OP <std::string> (287) 51
    EQ_OP <std::string> (288) 48
    LT_OP <std::string> (289) 50
    GT_OP <std::string> (290) 49
    NOT_OP <std::string> (291) 43
    AND_OP <std::string> (292)
    OR_OP <std::string> (293)
    ASSIGN_OP <std::string> (294) 30 31
    ATTR_OP <std::string> (295) 35 36


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    root <Node *> (42)
        on left: 1
        on right: 0
    main_class <Node *> (43)
        on left: 2
        on right: 1
    class_declaration_list <Node *> (44)
        on left: 3 4
        on right: 1 3
    class_declaration <Node *> (45)
        on left: 5
        on right: 3
    var_declaration_list <Node *> (46)
        on left: 6 7
        on right: 5 6
    var_declaration <Node *> (47)
        on left: 8
        on right: 6 15
    method_declaration_list <Node *> (48)
        on left: 9 10
        on right: 5 9
    method_declaration <Node *> (49)
        on left: 11
        on right: 9
    method_arguments <Node *> (50)
        on left: 12 13 14
        on right: 11 13
    method_content <Node *> (51)
        on left: 15 16 17
        on right: 11 15 16
    type <Node *> (52)
        on left: 18 19 20 21
        on right: 8 11 12
    statement_list <Node *> (53)
        on left: 22 23
        on right: 2 22 26
    statement_else <Node *> (54)
        on left: 24 25
        on right: 27
    statement <Node *> (55)
        on left: 26 27 28 29 30 31
        on right: 16 22 24 27 28
    expression <Node *> (56)
        on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 11 27 28 29 30 31 32 33 34 35 36 41 43 44
    operator <Node *> (57)
        on left: 46 47 48 49 50 51
        on right: 32
    number <Node *> (58)
        on left: 52
        on right: 37
    bool <Node *> (59)
        on left: 53
        on right: 38
    id <Node *> (60)
        on left: 54
        on right: 2 5 8 11 12 21 30 31 36 39 42


State 0

    0 $accept: • root "end of file"

    PUBLIC  shift, and go to state 1

    root        go to state 2
    main_class  go to state 3


State 1

    2 main_class: PUBLIC • CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS RS id RP LB statement_list RB RB

    CLASS  shift, and go to state 4


State 2

    0 $accept: root • "end of file"

    "end of file"  shift, and go to state 5


State 3

    1 root: main_class • class_declaration_list "end of file"

    CLASS  shift, and go to state 6

    $default  reduce using rule 4 (class_declaration_list)

    class_declaration_list  go to state 7
    class_declaration       go to state 8


State 4

    2 main_class: PUBLIC CLASS • id LB PUBLIC STATIC VOID MAIN LP STRING LS RS id RP LB statement_list RB RB

    ID  shift, and go to state 9

    id  go to state 10


State 5

    0 $accept: root "end of file" •

    $default  accept


State 6

    5 class_declaration: CLASS • id LB var_declaration_list method_declaration_list RB

    ID  shift, and go to state 9

    id  go to state 11


State 7

    1 root: main_class class_declaration_list • "end of file"

    "end of file"  shift, and go to state 12


State 8

    3 class_declaration_list: class_declaration • class_declaration_list

    CLASS  shift, and go to state 6

    $default  reduce using rule 4 (class_declaration_list)

    class_declaration_list  go to state 13
    class_declaration       go to state 8


State 9

   54 id: ID •

    $default  reduce using rule 54 (id)


State 10

    2 main_class: PUBLIC CLASS id • LB PUBLIC STATIC VOID MAIN LP STRING LS RS id RP LB statement_list RB RB

    LB  shift, and go to state 14


State 11

    5 class_declaration: CLASS id • LB var_declaration_list method_declaration_list RB

    LB  shift, and go to state 15


State 12

    1 root: main_class class_declaration_list "end of file" •

    $default  reduce using rule 1 (root)


State 13

    3 class_declaration_list: class_declaration class_declaration_list •

    $default  reduce using rule 3 (class_declaration_list)


State 14

    2 main_class: PUBLIC CLASS id LB • PUBLIC STATIC VOID MAIN LP STRING LS RS id RP LB statement_list RB RB

    PUBLIC  shift, and go to state 16


State 15

    5 class_declaration: CLASS id LB • var_declaration_list method_declaration_list RB

    BOOLEAN  shift, and go to state 17
    INT      shift, and go to state 18
    ID       shift, and go to state 9

    $default  reduce using rule 7 (var_declaration_list)

    var_declaration_list  go to state 19
    var_declaration       go to state 20
    type                  go to state 21
    id                    go to state 22


State 16

    2 main_class: PUBLIC CLASS id LB PUBLIC • STATIC VOID MAIN LP STRING LS RS id RP LB statement_list RB RB

    STATIC  shift, and go to state 23


State 17

   19 type: BOOLEAN •

    $default  reduce using rule 19 (type)


State 18

   18 type: INT • LS RS
   20     | INT •

    LS  shift, and go to state 24

    $default  reduce using rule 20 (type)


State 19

    5 class_declaration: CLASS id LB var_declaration_list • method_declaration_list RB

    PUBLIC  shift, and go to state 25

    $default  reduce using rule 10 (method_declaration_list)

    method_declaration_list  go to state 26
    method_declaration       go to state 27


State 20

    6 var_declaration_list: var_declaration • var_declaration_list

    BOOLEAN  shift, and go to state 17
    INT      shift, and go to state 18
    ID       shift, and go to state 9

    $default  reduce using rule 7 (var_declaration_list)

    var_declaration_list  go to state 28
    var_declaration       go to state 20
    type                  go to state 21
    id                    go to state 22


State 21

    8 var_declaration: type • id DELI

    ID  shift, and go to state 9

    id  go to state 29


State 22

   21 type: id •

    $default  reduce using rule 21 (type)


State 23

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC • VOID MAIN LP STRING LS RS id RP LB statement_list RB RB

    VOID  shift, and go to state 30


State 24

   18 type: INT LS • RS

    RS  shift, and go to state 31


State 25

   11 method_declaration: PUBLIC • type id LP method_arguments RP LB method_content RETURN expression DELI RB

    BOOLEAN  shift, and go to state 17
    INT      shift, and go to state 18
    ID       shift, and go to state 9

    type  go to state 32
    id    go to state 22


State 26

    5 class_declaration: CLASS id LB var_declaration_list method_declaration_list • RB

    RB  shift, and go to state 33


State 27

    9 method_declaration_list: method_declaration • method_declaration_list

    PUBLIC  shift, and go to state 25

    $default  reduce using rule 10 (method_declaration_list)

    method_declaration_list  go to state 34
    method_declaration       go to state 27


State 28

    6 var_declaration_list: var_declaration var_declaration_list •

    $default  reduce using rule 6 (var_declaration_list)


State 29

    8 var_declaration: type id • DELI

    DELI  shift, and go to state 35


State 30

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID • MAIN LP STRING LS RS id RP LB statement_list RB RB

    MAIN  shift, and go to state 36


State 31

   18 type: INT LS RS •

    $default  reduce using rule 18 (type)


State 32

   11 method_declaration: PUBLIC type • id LP method_arguments RP LB method_content RETURN expression DELI RB

    ID  shift, and go to state 9

    id  go to state 37


State 33

    5 class_declaration: CLASS id LB var_declaration_list method_declaration_list RB •

    $default  reduce using rule 5 (class_declaration)


State 34

    9 method_declaration_list: method_declaration method_declaration_list •

    $default  reduce using rule 9 (method_declaration_list)


State 35

    8 var_declaration: type id DELI •

    $default  reduce using rule 8 (var_declaration)


State 36

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN • LP STRING LS RS id RP LB statement_list RB RB

    LP  shift, and go to state 38


State 37

   11 method_declaration: PUBLIC type id • LP method_arguments RP LB method_content RETURN expression DELI RB

    LP  shift, and go to state 39


State 38

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP • STRING LS RS id RP LB statement_list RB RB

    STRING  shift, and go to state 40


State 39

   11 method_declaration: PUBLIC type id LP • method_arguments RP LB method_content RETURN expression DELI RB

    BOOLEAN  shift, and go to state 17
    INT      shift, and go to state 18
    ID       shift, and go to state 9

    $default  reduce using rule 14 (method_arguments)

    method_arguments  go to state 41
    type              go to state 42
    id                go to state 22


State 40

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING • LS RS id RP LB statement_list RB RB

    LS  shift, and go to state 43


State 41

   11 method_declaration: PUBLIC type id LP method_arguments • RP LB method_content RETURN expression DELI RB
   13 method_arguments: method_arguments • SEP method_arguments

    SEP  shift, and go to state 44
    RP   shift, and go to state 45


State 42

   12 method_arguments: type • id

    ID  shift, and go to state 9

    id  go to state 46


State 43

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS • RS id RP LB statement_list RB RB

    RS  shift, and go to state 47


State 44

   13 method_arguments: method_arguments SEP • method_arguments

    BOOLEAN  shift, and go to state 17
    INT      shift, and go to state 18
    ID       shift, and go to state 9

    $default  reduce using rule 14 (method_arguments)

    method_arguments  go to state 48
    type              go to state 42
    id                go to state 22


State 45

   11 method_declaration: PUBLIC type id LP method_arguments RP • LB method_content RETURN expression DELI RB

    LB  shift, and go to state 49


State 46

   12 method_arguments: type id •

    $default  reduce using rule 12 (method_arguments)


State 47

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS RS • id RP LB statement_list RB RB

    ID  shift, and go to state 9

    id  go to state 50


State 48

   13 method_arguments: method_arguments • SEP method_arguments
   13                 | method_arguments SEP method_arguments •

    SEP  shift, and go to state 44

    SEP       [reduce using rule 13 (method_arguments)]
    $default  reduce using rule 13 (method_arguments)


State 49

   11 method_declaration: PUBLIC type id LP method_arguments RP LB • method_content RETURN expression DELI RB

    BOOLEAN  shift, and go to state 17
    LB       shift, and go to state 51
    INT      shift, and go to state 18
    WHILE    shift, and go to state 52
    IF       shift, and go to state 53
    PRINT    shift, and go to state 54
    ID       shift, and go to state 9

    $default  reduce using rule 17 (method_content)

    var_declaration  go to state 55
    method_content   go to state 56
    type             go to state 21
    statement        go to state 57
    id               go to state 58


State 50

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS RS id • RP LB statement_list RB RB

    RP  shift, and go to state 59


State 51

   26 statement: LB • statement_list RB

    LB     shift, and go to state 51
    WHILE  shift, and go to state 52
    IF     shift, and go to state 53
    PRINT  shift, and go to state 54
    ID     shift, and go to state 9

    $default  reduce using rule 23 (statement_list)

    statement_list  go to state 60
    statement       go to state 61
    id              go to state 62


State 52

   28 statement: WHILE • LP expression RP statement

    LP  shift, and go to state 63


State 53

   27 statement: IF • LP expression RP statement statement_else

    LP  shift, and go to state 64


State 54

   29 statement: PRINT • LP expression RP DELI

    LP  shift, and go to state 65


State 55

   15 method_content: var_declaration • method_content

    BOOLEAN  shift, and go to state 17
    LB       shift, and go to state 51
    INT      shift, and go to state 18
    WHILE    shift, and go to state 52
    IF       shift, and go to state 53
    PRINT    shift, and go to state 54
    ID       shift, and go to state 9

    $default  reduce using rule 17 (method_content)

    var_declaration  go to state 55
    method_content   go to state 66
    type             go to state 21
    statement        go to state 57
    id               go to state 58


State 56

   11 method_declaration: PUBLIC type id LP method_arguments RP LB method_content • RETURN expression DELI RB

    RETURN  shift, and go to state 67


State 57

   16 method_content: statement • method_content

    BOOLEAN  shift, and go to state 17
    LB       shift, and go to state 51
    INT      shift, and go to state 18
    WHILE    shift, and go to state 52
    IF       shift, and go to state 53
    PRINT    shift, and go to state 54
    ID       shift, and go to state 9

    $default  reduce using rule 17 (method_content)

    var_declaration  go to state 55
    method_content   go to state 68
    type             go to state 21
    statement        go to state 57
    id               go to state 58


State 58

   21 type: id •
   30 statement: id • ASSIGN_OP expression DELI
   31          | id • LS expression RS ASSIGN_OP expression DELI

    LS         shift, and go to state 69
    ASSIGN_OP  shift, and go to state 70

    $default  reduce using rule 21 (type)


State 59

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS RS id RP • LB statement_list RB RB

    LB  shift, and go to state 71


State 60

   26 statement: LB statement_list • RB

    RB  shift, and go to state 72


State 61

   22 statement_list: statement • statement_list

    LB     shift, and go to state 51
    WHILE  shift, and go to state 52
    IF     shift, and go to state 53
    PRINT  shift, and go to state 54
    ID     shift, and go to state 9

    $default  reduce using rule 23 (statement_list)

    statement_list  go to state 73
    statement       go to state 61
    id              go to state 62


State 62

   30 statement: id • ASSIGN_OP expression DELI
   31          | id • LS expression RS ASSIGN_OP expression DELI

    LS         shift, and go to state 69
    ASSIGN_OP  shift, and go to state 70


State 63

   28 statement: WHILE LP • expression RP statement

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 80
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 64

   27 statement: IF LP • expression RP statement statement_else

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 84
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 65

   29 statement: PRINT LP • expression RP DELI

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 85
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 66

   15 method_content: var_declaration method_content •

    $default  reduce using rule 15 (method_content)


State 67

   11 method_declaration: PUBLIC type id LP method_arguments RP LB method_content RETURN • expression DELI RB

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 86
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 68

   16 method_content: statement method_content •

    $default  reduce using rule 16 (method_content)


State 69

   31 statement: id LS • expression RS ASSIGN_OP expression DELI

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 87
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 70

   30 statement: id ASSIGN_OP • expression DELI

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 88
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 71

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS RS id RP LB • statement_list RB RB

    LB     shift, and go to state 51
    WHILE  shift, and go to state 52
    IF     shift, and go to state 53
    PRINT  shift, and go to state 54
    ID     shift, and go to state 9

    $default  reduce using rule 23 (statement_list)

    statement_list  go to state 89
    statement       go to state 61
    id              go to state 62


State 72

   26 statement: LB statement_list RB •

    $default  reduce using rule 26 (statement)


State 73

   22 statement_list: statement statement_list •

    $default  reduce using rule 22 (statement_list)


State 74

   44 expression: LP • expression RP

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 90
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 75

   41 expression: NEW • INT LS expression RS
   42           | NEW • id LP RP

    INT  shift, and go to state 91
    ID   shift, and go to state 9

    id  go to state 92


State 76

   40 expression: THIS •

    $default  reduce using rule 40 (expression)


State 77

   52 number: NUMBER •

    $default  reduce using rule 52 (number)


State 78

   53 bool: BOOL •

    $default  reduce using rule 53 (bool)


State 79

   43 expression: NOT_OP • expression

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 93
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 80

   28 statement: WHILE LP expression • RP statement
   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    RP       shift, and go to state 95
    LS       shift, and go to state 96
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    operator  go to state 104


State 81

   37 expression: number •

    $default  reduce using rule 37 (expression)


State 82

   38 expression: bool •

    $default  reduce using rule 38 (expression)


State 83

   39 expression: id •

    $default  reduce using rule 39 (expression)


State 84

   27 statement: IF LP expression • RP statement statement_else
   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    RP       shift, and go to state 105
    LS       shift, and go to state 96
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    operator  go to state 104


State 85

   29 statement: PRINT LP expression • RP DELI
   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    RP       shift, and go to state 106
    LS       shift, and go to state 96
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    operator  go to state 104


State 86

   11 method_declaration: PUBLIC type id LP method_arguments RP LB method_content RETURN expression • DELI RB
   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    LS       shift, and go to state 96
    DELI     shift, and go to state 107
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    operator  go to state 104


State 87

   31 statement: id LS expression • RS ASSIGN_OP expression DELI
   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    LS       shift, and go to state 96
    RS       shift, and go to state 108
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    operator  go to state 104


State 88

   30 statement: id ASSIGN_OP expression • DELI
   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    LS       shift, and go to state 96
    DELI     shift, and go to state 109
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    operator  go to state 104


State 89

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS RS id RP LB statement_list • RB RB

    RB  shift, and go to state 110


State 90

   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP
   44           | LP expression • RP

    SEP      shift, and go to state 94
    RP       shift, and go to state 111
    LS       shift, and go to state 96
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    operator  go to state 104


State 91

   41 expression: NEW INT • LS expression RS

    LS  shift, and go to state 112


State 92

   42 expression: NEW id • LP RP

    LP  shift, and go to state 113


State 93

   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP
   43           | NOT_OP expression •

    SEP      shift, and go to state 94
    LS       shift, and go to state 96
    ATTR_OP  shift, and go to state 103

    SEP       [reduce using rule 43 (expression)]
    LS        [reduce using rule 43 (expression)]
    $default  reduce using rule 43 (expression)

    operator  go to state 104


State 94

   33 expression: expression SEP • expression

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 114
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 95

   28 statement: WHILE LP expression RP • statement

    LB     shift, and go to state 51
    WHILE  shift, and go to state 52
    IF     shift, and go to state 53
    PRINT  shift, and go to state 54
    ID     shift, and go to state 9

    statement  go to state 115
    id         go to state 62


State 96

   34 expression: expression LS • expression RS

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 116
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 97

   46 operator: ADD_OP •

    $default  reduce using rule 46 (operator)


State 98

   47 operator: SUB_OP •

    $default  reduce using rule 47 (operator)


State 99

   51 operator: MULT_OP •

    $default  reduce using rule 51 (operator)


State 100

   48 operator: EQ_OP •

    $default  reduce using rule 48 (operator)


State 101

   50 operator: LT_OP •

    $default  reduce using rule 50 (operator)


State 102

   49 operator: GT_OP •

    $default  reduce using rule 49 (operator)


State 103

   35 expression: expression ATTR_OP • LENGTH
   36           | expression ATTR_OP • id LP expression RP

    LENGTH  shift, and go to state 117
    ID      shift, and go to state 9

    id  go to state 118


State 104

   32 expression: expression operator • expression

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 119
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 105

   27 statement: IF LP expression RP • statement statement_else

    LB     shift, and go to state 51
    WHILE  shift, and go to state 52
    IF     shift, and go to state 53
    PRINT  shift, and go to state 54
    ID     shift, and go to state 9

    statement  go to state 120
    id         go to state 62


State 106

   29 statement: PRINT LP expression RP • DELI

    DELI  shift, and go to state 121


State 107

   11 method_declaration: PUBLIC type id LP method_arguments RP LB method_content RETURN expression DELI • RB

    RB  shift, and go to state 122


State 108

   31 statement: id LS expression RS • ASSIGN_OP expression DELI

    ASSIGN_OP  shift, and go to state 123


State 109

   30 statement: id ASSIGN_OP expression DELI •

    $default  reduce using rule 30 (statement)


State 110

    2 main_class: PUBLIC CLASS id LB PUBLIC STATIC VOID MAIN LP STRING LS RS id RP LB statement_list RB • RB

    RB  shift, and go to state 124


State 111

   44 expression: LP expression RP •

    $default  reduce using rule 44 (expression)


State 112

   41 expression: NEW INT LS • expression RS

    LP      shift, and go to state 74
    NEW     shift, and go to state 75
    THIS    shift, and go to state 76
    NUMBER  shift, and go to state 77
    BOOL    shift, and go to state 78
    ID      shift, and go to state 9
    NOT_OP  shift, and go to state 79

    $default  reduce using rule 45 (expression)

    expression  go to state 125
    number      go to state 81
    bool        go to state 82
    id          go to state 83


State 113

   42 expression: NEW id LP • RP

    RP  shift, and go to state 126


State 114

   32 expression: expression • operator expression
   33           | expression • SEP expression
   33           | expression SEP expression •
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    LS       shift, and go to state 96
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    SEP       [reduce using rule 33 (expression)]
    LS        [reduce using rule 33 (expression)]
    ADD_OP    [reduce using rule 33 (expression)]
    SUB_OP    [reduce using rule 33 (expression)]
    MULT_OP   [reduce using rule 33 (expression)]
    EQ_OP     [reduce using rule 33 (expression)]
    LT_OP     [reduce using rule 33 (expression)]
    GT_OP     [reduce using rule 33 (expression)]
    ATTR_OP   [reduce using rule 33 (expression)]
    $default  reduce using rule 33 (expression)

    operator  go to state 104


State 115

   28 statement: WHILE LP expression RP statement •

    $default  reduce using rule 28 (statement)


State 116

   32 expression: expression • operator expression
   33           | expression • SEP expression
   34           | expression • LS expression RS
   34           | expression LS expression • RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    LS       shift, and go to state 96
    RS       shift, and go to state 127
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103

    operator  go to state 104


State 117

   35 expression: expression ATTR_OP LENGTH •

    $default  reduce using rule 35 (expression)


State 118

   36 expression: expression ATTR_OP id • LP expression RP

    LP  shift, and go to state 128


State 119

   32 expression: expression • operator expression
   32           | expression operator expression •
   33           | expression • SEP expression
   34           | expression • LS expression RS
   35           | expression • ATTR_OP LENGTH
   36           | expression • ATTR_OP id LP expression RP

    SEP      shift, and go to state 94
    LS       shift, and go to state 96
    ADD_OP   shift, and go to state 97
    SUB_OP   shift, and go to state 98
    MULT_OP  shift, and go to state 99
    EQ_OP    shift, and go to state 100
    LT_OP    shift, and go to state 101
    GT_OP    shift, and go to state 102
    ATTR_OP  shift, and go to state 103
